--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,8 @@
   <title>PepaPig</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
